src/objects/Unit_Model__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Unit Models</relationshipLabel>
        <relationshipName>Unit_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unit_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description (Depricated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Model</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <label>Sub-Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <label>Unit Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Unit Models</relationshipLabel>
        <relationshipName>Unit_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VIN_Code__c</fullName>
        <label>VIN Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Holdback__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Holdback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>unit model description</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Unit Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UM-{0000000}</displayFormat>
        <label>Unit Model Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>